--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -20,8 +20,10 @@ jobs:
       - name: Install Ruby and Gems
         uses: ruby/setup-ruby@v1
         with:
-          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-          cache-version: 9
+          env:
+            BUNDLE_WITH: documentation
+          bundler-cache: true   # runs 'bundle install' and caches installed gems automatically
+          cache-version: 10
 
       - name: Set git indentity
         run: |
