--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -14,14 +14,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Extract branch name
+      - name: Extract branch name for pull requests
       - if: github.event_name == 'pull_request'
         run: echo "BRANCH_NAME=${GITHUB_HEAD_REF}" >> $GITHUB_ENV
+      
+      - name: Extract branch name if not a pull request
       - if: github.event_name != 'pull_request'
         run: echo "BRANCH_NAME=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
 
       - name: Show branch name
-        run: echo 'The branch name is' $BRANCH_NAME
+        run: echo "The branch name is $BRANCH_NAME"
 
       - name: Checkout repo
         uses: actions/checkout@v2
