--- a/config/simulator/tlc.yaml
+++ b/config/simulator/tlc.yaml
@@ -11,15 +11,27 @@ components:
       cycle_time: 6
   signal_group:
     A1:
-      plan: '11NBBB'
     A2:
-      plan: '1NBBBB'
     B1:
-      plan: 'BBB11N'
     B2:
-      plan: 'BBB1NB'
   detector_logic:
     DL1:
+signal_plans:
+  1:
+    dynamic_bands:
+      1: 0
+      2: 5
+    states:
+      A1: '11NBBB'
+      A2: '1NBBBB'
+      B1: 'BBB11N'
+      B2: 'BBB1NB'
+  2:
+    states:
+      A1: '111NBB'
+      A2: '11NBBB'
+      B1: 'BBB11N'
+      B2: 'BBB1NB'
 intervals:
   timer: 0.1
   watchdog: 0.1
