--- a/.github/workflows/swarco_itc2.yml
+++ b/.github/workflows/swarco_itc2.yml
@@ -18,15 +18,8 @@ jobs:
 
     runs-on: [ self-hosted, Linux, X64, itc2 ]
     steps:
-    - name: Check out rsmp_validator repository
+    - name: Check out repository
       uses: actions/checkout@v2
-      with:
-        repository: rsmp-nordic/rsmp_validator
-        ref: ${{ github.event.client_payload.ref }}
-    - name: Check out rsmp_implementations repository
-      uses: actions/checkout@v2
-      with:
-        path: implementations
     - name: Configure bundle
       run: bundle config set path '~/rsmp_gems/bundle'
     - name: Run bundle install
@@ -41,7 +34,7 @@ jobs:
     - name: Run tests
       run: bundle exec rspec --format Validator::Brief --format Validator::Details --out log/validation.log spec/site
       env:
-        SITE_CONFIG: implementations/config/swarco_itc2.yaml
+        SITE_CONFIG: config/swarco_itc2.yaml
     - name: Show detailed log
       if: always()
       run: cat log/validation.log
