--- a/.github/workflows/dynniq_ec2.yml
+++ b/.github/workflows/dynniq_ec2.yml
@@ -16,3 +16,49 @@ on:
 jobs:
   test:
     if: ${{ false }}      # disable for now
+    runs-on: [ self-hosted, Windows, X64, ec2 ]
+    steps:
+    - name: Check out repository
+      uses: actions/checkout@v2
+    - name: Set up ruby
+      uses: ruby/setup-ruby@v1
+      env:
+        ImageOS: win19
+      with:
+        ruby-version: 3.0
+        bundler-cache: true # runs 'bundle install' and caches installed gems
+    - name: Run tests
+      run: bundle exec rspec --format Validator::Brief --format Validator::Details --out log/validation.log spec/site
+      env:
+        SITE_CONFIG: config/dynniq_ec2.yaml
+    - name: Show detailed log
+      if: always()
+      run: cat log/validation.log
+    - name: Rename validation.log
+      if: always()
+      run: |
+        $date=Get-Date -Format 'yyyy-MM-dd_HH-mm'
+        mv log/validation.log log/validation_ec2_$date.log
+    - name: Upload validation.log
+      if: always()
+      uses: actions/upload-artifact@v2
+      with:
+        name: rspec validation
+        path: log/validation_ec2_*.log
+    - name: Get ec2 proxyapp.ini
+      if: always()
+      env:
+        USER: ${{ secrets.EC2_USER }}
+        PASSWD: ${{ secrets.EC2_PASSWD }}
+        IP: ${{ secrets.EC2_IP }}
+      run: |
+        Remove-Item Alias:curl
+        $remote_path='ftp://'+$env:IP+'/opt/D2/appl2/proxyapp.ini'
+        $credentials=$env:USER+':'+$env:PASSWD
+        curl -u $credentials $remote_path -o proxyapp.ini
+    - name: Upload ec2 proxyapp.ini
+      if: always()
+      uses: actions/upload-artifact@v2
+      with:
+        name: ec2 proxyapp.ini
+        path: proxyapp.ini
