--- a/.github/workflows/gem_tlc.yml
+++ b/.github/workflows/gem_tlc.yml
@@ -5,17 +5,14 @@
 # This workflow will run rspec
 
 name: Gem TLC
-
 on:
   push:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-  workflow_dispatch:
-
 jobs:
   test:
-    runs-on: [ self-hosted, Linux, X64 ]
+    runs-on: ubuntu-latest
     steps:
     - name: Check out repository
       uses: actions/checkout@v2
