M0008 multi detector logic · Issue #33 - second commit

--- a/.github/workflows/gem_tlc.yml
+++ b/.github/workflows/gem_tlc.yml
@@ -25,7 +25,8 @@ jobs:
     
     - name: Run tests
       shell: bash
-      run: bundle exec rspec --format Validator::Brief --format Validator::Details --out log/validation.log --tag '~script' spec/site
+      run: bundle exec rspec --format Validator::Brief --format Validator::Details --out log/validation.log --tag '~script' spec/site/tlc/detector_logics_spec.rb:39
+
       env:
         SITE_CONFIG: config/gem_tlc.yaml
     
