--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -28,7 +28,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 github_username:  rsmp-nordic
 
 # Build settings
-theme: just-the-docs
+#theme: just-the-docs
 remote_theme: pmarsceill/just-the-docs
 
 plugins:
