added config value input = Validator.config['items']['force_input'] to forcing is set with M0019

--- a/config/dynniq_ec2.yaml
+++ b/config/dynniq_ec2.yaml
@@ -29,6 +29,7 @@ items:
   traffic_situations: [1,2]
   emergency_routes: [1]
   inputs: [1]
+  force_input: 101
 startup_sequence: 'efg'
 secrets:
   security_codes:
