--- a/config/gem_tlc.yaml
+++ b/config/gem_tlc.yaml
@@ -34,6 +34,7 @@ items:
   traffic_situations: [1,2]
   emergency_routes: [1]
   inputs: [1]
+  force_input: 101
 startup_sequence: 'efg'
 secrets:
   security_codes:
