--- a/.github/workflows/dynniq_ec2.yml
+++ b/.github/workflows/dynniq_ec2.yml
@@ -11,6 +11,8 @@ on:
     branches: [ master ]
 jobs:
   test:
+    if: ${{ false }}
+
     runs-on: [ self-hosted, Windows, X64, ec2 ]
     steps:
     - name: Check out repository
