--- a/.github/workflows/swarco_itc3.yml
+++ b/.github/workflows/swarco_itc3.yml
@@ -11,6 +11,8 @@ on:
     branches: [ master ]
 jobs:
   test:
+    if: ${{ false }}
+
     runs-on: [ self-hosted, Windows, X64, itc3 ]
     steps:
     - name: Check out repository
