--- a/.github/workflows/gem_supervisor.yml
+++ b/.github/workflows/gem_supervisor.yml
@@ -5,12 +5,15 @@
 # This workflow will run rspec
 
 name: Gem supervisor
-on: [push, pull_request]
+on: push
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout repo
+      uses: actions/checkout@v2
+
+    - Install Ruby and gems
     - uses: ruby/setup-ruby@v1
       with:
         # ruby-version is not needed because we have a .ruby-version file
