--- a/.github/workflows/gem_supervisor.yml
+++ b/.github/workflows/gem_supervisor.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Install Ruby and gems
-    - uses: ruby/setup-ruby@v1
+      uses: ruby/setup-ruby@v1
       with:
         # ruby-version is not needed because we have a .ruby-version file
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
