--- a/.github/workflows/swarco_itc3.yml
+++ b/.github/workflows/swarco_itc3.yml
@@ -7,34 +7,37 @@
 name: Swarco ITC-3
 
 on:
-  push:
+  pull_request:
     branches: [ master ]
 jobs:
   test:
-
     runs-on: [ self-hosted, Windows, X64, itc3 ]
     steps:
     - name: Check out repository
       uses: actions/checkout@v2
+
     - name: Set up ruby
       uses: ruby/setup-ruby@v1
       env:
         ImageOS: win19
       with:
-        ruby-version: 3.0
         bundler-cache: true # runs 'bundle install' and caches installed gems
+
     - name: Run tests
       run: bundle exec rspec --format Validator::Brief --format Validator::Details --out log/validation.log spec/site
       env:
         SITE_CONFIG: config/swarco_itc3.yaml
+
     - name: Show detailed log
       if: always()
       run: cat log/validation.log
+
     - name: Rename validation.log
       if: always()
       run: |
         $date=Get-Date -Format 'yyyy-MM-dd_HH-mm'
         mv log/validation.log log/validation_itc3_$date.log
+
     - name: Upload validation.log
       if: always()
       uses: actions/upload-artifact@v2
