--- a/.github/workflows/dynniq_ec2.yml
+++ b/.github/workflows/dynniq_ec2.yml
@@ -15,6 +15,8 @@ on:
 
 jobs:
   test:
+    if: ${{ false }}
+
     runs-on: [ self-hosted, Windows, X64, ec2 ]
     steps:
     - name: Check out repository
