--- a/.github/workflows/dynniq_ec2.yml
+++ b/.github/workflows/dynniq_ec2.yml
@@ -13,6 +13,7 @@ on:
     branches: [ master ]
 jobs:
   test:
+    if ${{ false }}
     runs-on: [ self-hosted, Windows, X64, ec2 ]
     steps:
     - name: Check out repository
