--- a/config/swarco_itc3.yaml
+++ b/config/swarco_itc3.yaml
@@ -40,6 +40,8 @@ secrets:
 restrict_testing:
   core_version: 3.1.2
   sxl_version: 1.0.13
+skip_validation:
+  - Alarm
 activate_alarm:
   input: 152
   alarm: A0301
