update alarm activation config

--- a/config/swarco_itc2.yaml
+++ b/config/swarco_itc2.yaml
@@ -44,6 +44,5 @@ restrict_testing:
   sxl_version: 1.0.7 
 skip_validation:
   - Alarm
-activate_alarm:
-  input: 152
-  alarm: A0301
+alarm_activation:
+  A0301: 152
