--- a/config/swarco_itc3.yaml
+++ b/config/swarco_itc3.yaml
@@ -42,6 +42,5 @@ restrict_testing:
   sxl_version: 1.0.13
 skip_validation:
   - Alarm
-activate_alarm:
-  input: 152
-  alarm: A0301
+alarm_activation:
+  A0301: 152
