--- a/.github/workflows/gem_supervisor.yml
+++ b/.github/workflows/gem_supervisor.yml
@@ -8,7 +8,7 @@ name: Gem supervisor
 on: push
 jobs:
   test:
-    if ${{ false }}
+    if: ${{ false }}
     runs-on: ubuntu-latest
     steps:
     - name: Checkout repo
