--- a/.github/workflows/swarco_itc2.yml
+++ b/.github/workflows/swarco_itc2.yml
@@ -13,7 +13,7 @@ on:
     branches: [ master ]
 jobs:
   test:
-    if ${{ false }}
+    if: ${{ false }}
     runs-on: [ self-hosted, Linux, X64, itc2 ]
     steps:
     - name: Check out repository
