--- a/.github/workflows/swarco_itc3.yml
+++ b/.github/workflows/swarco_itc3.yml
@@ -11,6 +11,8 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+  workflow_dispatch:
+
 jobs:
   test:
     runs-on: [ self-hosted, Windows, X64, itc3 ]
