--- a/.github/workflows/swarco_itc2.yml
+++ b/.github/workflows/swarco_itc2.yml
@@ -134,7 +134,7 @@ jobs:
           until `echo -e "ITC\nEXIT" | nc localhost $LISTEN | grep -q -a "3-light"`; do echo Waiting...; sleep 5; done
 
       - name: Run tests
-        run: bundle exec rspec --format Validator::Brief --format Validator::Details --out log/validation.log spec/site/tlc/modes_spec.rb:162
+        run: bundle exec rspec --format Validator::Brief --format Validator::Details --out log/validation.log spec/site
         env:
           SITE_CONFIG: config/swarco_itc2.yaml
 
