--- a/.github/workflows/swarco_itc3.yml
+++ b/.github/workflows/swarco_itc3.yml
@@ -28,7 +28,7 @@ jobs:
         bundler-cache: true # runs 'bundle install' and caches installed gems
 
     - name: Run tests
-      run: bundle exec rspec --format Validator::Brief --format Validator::Details --out log/validation.log spec/site/tlc/signal_groups_spec.rb:100
+      run: bundle exec rspec --format Validator::Brief --format Validator::Details --out log/validation.log spec/site
       env:
         SITE_CONFIG: config/swarco_itc3.yaml
 
