--- a/.github/workflows/gem_tlc.yml
+++ b/.github/workflows/gem_tlc.yml
@@ -5,7 +5,12 @@
 # This workflow will run rspec
 
 name: Gem TLC
-on: push
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+  workflow_dispatch:
 jobs:
   test:
     timeout-minutes: 10
