--- a/.github/workflows/swarco_itc2.yml
+++ b/.github/workflows/swarco_itc2.yml
@@ -1,9 +1,10 @@
 name: Swarco ITC-2
 on:
   push:
+    branches: [ master ]
   pull_request:
+    branches: [ master ]
   workflow_dispatch:
-
 jobs:
   test:
     runs-on: ubuntu-latest
