update rsmp gem, add connect timeout configs, refactor

--- a/config/simulator/supervisor.yaml
+++ b/config/simulator/supervisor.yaml
@@ -11,5 +11,5 @@ log:
   id: true
   port: true
   json: true
-  acknowledgements: false
-  watchdogs: false
+  acknowledgements: true
+  watchdogs: true
