--- a/.github/workflows/gem_supervisor.yml
+++ b/.github/workflows/gem_supervisor.yml
@@ -5,7 +5,11 @@
 # This workflow will run rspec
 
 name: Gem supervisor
-on: push
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 jobs:
   test:
     timeout-minutes: 10
