fix workflow test selection

--- a/.github/workflows/gem_tlc.yml
+++ b/.github/workflows/gem_tlc.yml
@@ -34,7 +34,7 @@ jobs:
     
     - name: Run tests
       shell: bash
-      run: bundle exec rspec --format Validator::Brief --format Validator::Details --out log/validation.log --tag '~programming' spec/site
+      run: bundle exec rspec --format Validator::Brief --format Validator::Details --out log/validation.log spec/site
       env:
         SITE_CONFIG: config/gem_tlc.yaml
     
