--- a/.github/workflows/gem_supervisor.yml
+++ b/.github/workflows/gem_supervisor.yml
@@ -34,7 +34,7 @@ jobs:
 
     - name: Run tests
       shell: bash
-      run: bundle exec rspec --format Validator::Brief --format Validator::Details --out log/validation.log --tag '~programming' spec/supervisor
+      run: bundle exec rspec --format Validator::Brief --format Validator::Details --out log/validation.log spec/supervisor
       env:
         SUPERVISOR_CONFIG: config/gem_supervisor.yaml
 
