--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -5,6 +5,8 @@ name: Build Documentation
 on:
   push:
     branches: [ master, docs ]
+  pull_request:
+    branches: [ master, docs ]
 
 jobs:
   build:
