--- a/config/simulator/tlc.yaml
+++ b/config/simulator/tlc.yaml
@@ -37,7 +37,7 @@ inputs:
   total: 8
   programming:
     7:
-      raise: A0301
+      raise_alarm: A0301
       component: DL1
 intervals:
   timer: 0.1
