--- a/.github/workflows/swarco_itc3.yml
+++ b/.github/workflows/swarco_itc3.yml
@@ -7,9 +7,9 @@
 name: Swarco ITC-3
 on:
   push:
-    branches: [ master ]
+    branches: [ equipment ]
   pull_request:
-    branches: [ master ]
+    branches: [ equipment ]
 jobs:
   test:
     runs-on: [ self-hosted, Windows, X64, itc3 ]
