run equipment tests on PR rather than push

--- a/.github/workflows/dynniq_ec2.yml
+++ b/.github/workflows/dynniq_ec2.yml
@@ -6,7 +6,7 @@
 
 name: Dynniq EC-2
 on:
-  push:
+  pull_request:
     branches: [ equipment ]
   schedule:
     # schedule runs only on the default branch. time is in UTC.
