--- a/.github/workflows/swarco_itc2.yml
+++ b/.github/workflows/swarco_itc2.yml
@@ -1,10 +1,12 @@
 name: Swarco ITC-2
 on:
-  push:
+  pull_request:
     branches: [ equipment ]
   schedule:
-    # * is a special character in YAML so you have to quote this string
-    - cron:  '0 11 * * *'
+    # schedule runs only on the default branch. time is in UTC.
+    # * is a special character in YAML so you have to quote this string.
+    # run every night at 3:45AM UTC.
+    - cron:  '45 3 * * *'
 jobs:
   test:
     runs-on: ubuntu-latest
