run gem tests on all pushes

--- a/.github/workflows/gem_tlc.yml
+++ b/.github/workflows/gem_tlc.yml
@@ -5,9 +5,7 @@
 # This workflow will run rspec
 
 name: Gem TLC
-on:
-  push:
-    branches: [ master, equipment ]
+on: push
 jobs:
   test:
     timeout-minutes: 10
