Revert "itc2: Fix workflow"

--- a/.github/workflows/gem_supervisor.yml
+++ b/.github/workflows/gem_supervisor.yml
@@ -5,7 +5,9 @@
 # This workflow will run rspec
 
 name: Gem supervisor
-on: push
+on:
+  push:
+    branches: [ master, equipment ]
 jobs:
   test:
     timeout-minutes: 10
