--- a/.github/workflows/dynniq_ec2.yml
+++ b/.github/workflows/dynniq_ec2.yml
@@ -6,19 +6,19 @@
 
 name: Dynniq EC-2
 on:
-  pull_request:
+  push:
     branches: [ equipment ]
   schedule:
-    # schedule runs only on the default branch. time is in UTC.
-    # * is a special character in YAML so you have to quote this string.
-    # run every night at 3:45AM UTC.
-    - cron:  '45 0 * * *'
+    # * is a special character in YAML so you have to quote this string
+    - cron:  '30 11 * * *'
+
 jobs:
   test:
     runs-on: [ self-hosted, Windows, X64, ec2 ]
     steps:
     - name: Check out repository
       uses: actions/checkout@v2
+
     - name: Install Ruby and gems
       uses: ruby/setup-ruby@v1
       env:
