--- a/.github/workflows/gem_tlc.yml
+++ b/.github/workflows/gem_tlc.yml
@@ -5,7 +5,9 @@
 # This workflow will run rspec
 
 name: Gem TLC
-on: push
+on:
+  push:
+    branches: [ master, equipment ]
 jobs:
   test:
     timeout-minutes: 10
