--- a/.github/workflows/swarco_itc3.yml
+++ b/.github/workflows/swarco_itc3.yml
@@ -6,13 +6,11 @@
 
 name: Swarco ITC-3
 on:
-  pull_request:
+  push:
     branches: [ equipment ]
   schedule:
-    # schedule runs only on the default branch. time is in UTC.
-    # * is a special character in YAML so you have to quote this string.
-    # run every night at 3:45AM UTC.
-    - cron:  '45 0 * * *'
+    # * is a special character in YAML so you have to quote this string
+    - cron:  '30 11 * * *'
 jobs:
   test:
     runs-on: [ self-hosted, Windows, X64, itc3 ]
