--- a/.github/workflows/swarco_itc2.yml
+++ b/.github/workflows/swarco_itc2.yml
@@ -1,7 +1,7 @@
 name: Swarco ITC-2
 on:
   pull_request:
-    branches: [ equipment ]
+    types: [ labeled ]
   schedule:
     # schedule runs only on the default branch. time is in UTC.
     # * is a special character in YAML so you have to quote this string.
@@ -9,6 +9,7 @@ on:
     - cron:  '45 0 * * *'
 jobs:
   test:
+    if: ${{ github.event.label.name == 'equipment' }}
     runs-on: ubuntu-22.04
     steps:
       - name: Install prerequisites
