--- a/config/swarco_itc2.yaml
+++ b/config/swarco_itc2.yaml
@@ -42,7 +42,7 @@ secrets:
 restrict_testing:
   core_version: 3.1.2
   sxl_version: 1.0.7 
-alarm_activation:
+alarms:
   A0302: 
-    input: 152
     component: KK+AG9998=001DL001
+    activation_input: 152
