--- a/config/dynniq_ec2.yaml
+++ b/config/dynniq_ec2.yaml
@@ -30,8 +30,8 @@ items:
   plans: [3,4]
   traffic_situations: [1,2]
   emergency_routes: [1]
-  inputs: [1]
-  force_input: 101
+  inputs: [1,101]
+  outputs: [1,2]
 startup_sequence: 'efg'
 secrets:
   security_codes:
