yellow flash timeout config

--- a/config/dynniq_ec2.yaml
+++ b/config/dynniq_ec2.yaml
@@ -18,6 +18,7 @@ timeouts:
   shutdown: 180
   startup_sequence: 60
   functional_position: 30
+  yellow_flash: 60
 components:
   main:
     KK+AG9998=001TC000:
