ITC-3 CI: Fix upload of detailed logs

--- a/.github/workflows/swarco_itc3.yml
+++ b/.github/workflows/swarco_itc3.yml
@@ -39,7 +39,7 @@ jobs:
     - name: Rename validation.log
       if: always()
       run: |
-        mv log/validation.log log/validation_ruby_$(date +%F_%H-%M-%S).log
+        mv log/validation.log log/validation_itc3_$(date +%F_%H-%M-%S).log
 
     - name: Upload validation.log
       if: always()
