ITC-3 CI: Fix run when trigged by workflow dispatch

--- a/.github/workflows/swarco_itc3.yml
+++ b/.github/workflows/swarco_itc3.yml
@@ -16,7 +16,7 @@ on:
     - cron:  '45 0 * * *'
 jobs:
   test:
-    if: ${{ github.event_name == 'schedule' || github.event.label.name == 'equipment' }}
+    if: ${{ github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' || github.event.label.name == 'equipment' }}
     runs-on: [ self-hosted, Linux, X64, itc3 ]
     steps:
     - name: Check out repository
